--- a/application/templates/cs_projects.html
+++ b/application/templates/cs_projects.html
@@ -9,7 +9,7 @@
         </div>
         <div class="card-body">
             <div class="row">
-                <div class="col-lg-3 col-md-4 col-xs-6 custom-thumbnail">
+                <div class="col-lg-4 custom-thumbnail">
                     <h5 class="project-caption">FullMonteWeb</h5>
                     <div class="cs-gallery zoom">
                         <img src="https://mdbootstrap.com/img/screens/yt/screen-video-1.jpg" class="img-fluid gallery-img" alt="">
@@ -21,7 +21,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6 custom-thumbnail">
+                <div class="col-lg-4 custom-thumbnail">
                     <h5 class="project-caption">PocketTravel</h5>
                     <div class="cs-gallery zoom">
                         <a href="{% url 'PocketTravel' %}">
@@ -33,7 +33,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6 custom-thumbnail">
+                <div class="col-lg-4 custom-thumbnail">
                     <h5 class="project-caption">Reversi AI</h5>
                     <div class="cs-gallery zoom">
                         <a href="{% url 'ReversiAI' %}">
@@ -45,7 +45,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6 custom-thumbnail">
+                <div class="col-lg-4 custom-thumbnail">
                     <h5 class="project-caption">GunmanJump</h5>
                     <div class="cs-gallery zoom">
                         <a href="{% url 'GunmanJump' %}">
@@ -57,7 +57,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6 custom-thumbnail">
+                <div class="col-lg-4 custom-thumbnail">
                     <h5 class="project-caption">BubbleMania</h5>
                     <div class="cs-gallery zoom">
                         <a href="{% url 'BubbleMania' %}">
@@ -69,7 +69,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6 custom-thumbnail">
+                <div class="col-lg-4 custom-thumbnail">
                     <h5 class="project-caption">Cycle63</h5>
                     <div class="cs-gallery zoom">
                         <a href="{% url 'Cycle63' %}">
@@ -81,7 +81,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6 custom-thumbnail">
+                <div class="col-lg-4 custom-thumbnail">
                     <h5 class="project-caption">TunerPro</h5>
                     <div class="cs-gallery zoom">
                         <a href="{% url 'TunerPro' %}">
@@ -93,7 +93,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6 custom-thumbnail">
+                <div class="col-lg-4 custom-thumbnail">
                     <h5 class="project-caption">Oregon Wildlife Classifier</h5>
                     <div class="cs-gallery zoom">
                         <a href="{% url 'OregonWildlifeClassifier' %}">
