--- a/application/static/css/styles.css
+++ b/application/static/css/styles.css
@@ -16,15 +16,7 @@ body {
     font-family: 'Raleway', sans-serif;
     font-size: 14pt;
     background-color: white;
-    background-image:
-        linear-gradient(
-        to right, 
-        #f3e2ce,
-        #f3e2ce 60%,
-        #d8dfd6 60%,
-        #d8dfd6 40%,
-        #d8dfd6 40%
-        );
+
 }
 
 img {
@@ -216,7 +208,7 @@ p.card-text {
 
 img.gallery-img {
     width: 100%;
-    height: 200px;
+    height: 300px;
     border-radius:5px;
     object-fit:cover;
 }
@@ -236,31 +228,30 @@ img.gallery-img {
     transform: scale(1.1);
 }
 
-/* about page
-====================*/
-
-#rectangle{
-    width: 3vw;
-    height: 120vh;
-    border-radius: 50px;
-    background: #ad9a84;
-    background-image: linear-gradient(to top, #ad9a84, #f3e2ce);
-    position: absolute;
-    top: 80vh;
-    left: 23vw;
-}
 
 /* Selected CS/art projects section
 ====================*/
 
+.project-background-card {
+    max-width: 90%;
+    margin-top: 3vw;
+    margin-bottom: 3vw;
+    background-color: #b3c0b9;
+}
+
 .project-card {
     border-radius:10px;
     overflow: hidden;
+    box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.5);
+}
+
+.project-card .card-body {
+    color: #778e90;
 }
 
 .card-img {
     width: 100%;
-    height: 350px;
+    height: 300px;
     object-fit:cover;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -276,18 +267,25 @@ img.gallery-img {
     z-index: 90;
 }
 
-/* All CS projects page
+/* about page
+====================*/
+
+
+
+/* All SW/HW projects page
 ====================*/
 
 .cs-projects-card {
-    max-width: 90vw;
-    margin-top: 3vw;
-    background-color: #ad9a84;
+    max-width: 90%;
+    margin-top: 6vh;
+    background-color: #b3c0b9;
+    margin-bottom: 10vh;
 }
 
 .cs-gallery {
     overflow: hidden;
     position: relative;
+    box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.3);
 }
 
 .cs-gallery .hover-overlay {
@@ -319,14 +317,54 @@ img.gallery-img {
     opacity: 1;
 }
 
-/* art projects section
+/* All art projects page
+====================*/
+.art-projects-card {
+    max-width: 90%;
+    margin-top: 6vh;
+    background-color: #b3c0b9;
+    margin-bottom: 10vh;
+}
+
+/* Individual projects page
 ====================*/
 
-.art-projects-card {
-    max-width: 90vw;
-    margin-top: 3vw;
-    margin-bottom: 3vw;
-    background-color: #b3c0b9;
+.project-intro {
+    position: relative;
+    margin-bottom: 10%;
+    padding: 0;
+    height: 90vh;
+    width: 100vw;
+}
+
+.project-intro-img {
+    width: 50%;
+    height: auto;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.sidebar-nav {
+    position: fixed;
+    overflow: auto;
+    margin: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 0;
+    list-style: none;
+    transition: all .5s;
+}
+
+.sidebar-nav .menu,
+.sidebar-nav .sub-menu {
+    list-style: none;
+}
+
+.sidebar-nav a {
+    color: #778e90;
 }
 
 /* contact/footer
