--- a/application/templates/Cycle63.html
+++ b/application/templates/Cycle63.html
@@ -1,5 +1,26 @@
-{% extends "base.html" %}
-{% block content %}
+{% extends "projects_base.html" %}
+
+{% block project_image %}
+{% load static %}
+    <img class="project-intro-img" src="{% static 'images/PocketTravel/Logo.png' %}" alt="">
+{% endblock %}
+
+{% block sidebar_content %}
+{% load static %}
+    <li><a class="" href="#">Introduction</a></li>
+    <ul class="sub-menu">
+        <li><a class="" href="#">Team</a></li>
+        <li><a class="" href="#">Motivation</a></li>
+    </ul>
+    <li><a class="" href="#">Design</a></li>
+    <ul class="sub-menu">
+        <li><a class="" href="#">Features</a></li>
+        <li><a class="" href="#">Algorithms</a></li>
+        <li><a class="" href="#">My Contributions</a></li>
+    </ul>
+{% endblock %}
+
+{% block project_content %}
 {% load static %}
 
 {% endblock %}
