--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -86,7 +86,7 @@
     </div>
 </section>
 
-<section class="home-cs-selected hide" id="cs-selected" style="padding-top:20vh; scroll-margin-top: 5vw;">
+<section class="home-cs-selected hide" id="cs-selected" style="padding-top:20vh;">
     <div class="card text-center mx-auto project-background-card">
         <div class="card-header">
             <h2 class="card-title" style="color: white;"> Software/Hardware Project Highlights 💻</h2>
@@ -166,7 +166,7 @@
     
 </section>
 
-<section id="selected-arts" class="home-selected-arts hide" style="padding-top:20vh; scroll-margin-top: 5vw;">
+<section id="selected-arts" class="home-selected-arts hide" style="padding-top:20vh;">
     <div class="card text-center mx-auto project-background-card">
         <div class="card-header">
             <h2 class="card-title" style="color: white;">  Artwork Highlights 🖌</h2>
